kube-oidc-proxy-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-oidc-proxy
