dex-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dex
  namespace: dex
  annotations:
    kubernetes.io/ingress.class: "contour"
spec:
  tls:
  - secretName: dex
    hosts:
    - dex.vmware.com
  rules:
  - host: dex.vmware.com
    http:
      paths:
      - backend:
          serviceName: dex
          servicePort: 5556
